Fix button showing up on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -210,6 +210,7 @@ header {
     &:hover {
       background: linear-gradient(rgb(255, 231, 136), rgb(255, 231, 136));
       background-color: #ffeca0;
+      display:none;
     }
   }
 
@@ -222,13 +223,16 @@ header {
     line-height:14px;
     font-size:14px;
     background-color: #FFE788;
+    display:none;
   }
 
   .downloads {
     float: right;
     margin:0 45px 0 0;
+    display:none;
 
     span {
+      display:none;
       float:left;
       line-height:52px;
       font-size:90%;
